chore: добавлены билеты

--- a/01.md
+++ b/01.md
@@ -1,4 +1,4 @@
-# Билет 1. Функциональная зависимость между переменными. Норма и метрика векторного пространства.
+# 1. Функциональная зависимость между переменными. Норма и метрика векторного пространства.
 
 ## Функциональная зависимость
 
@@ -9,23 +9,23 @@ $f(x_1,x_2,\dots,x_n):E\subset\mathbb{R}^n\to\mathbb{R}$,
 
 ## Норма
 
-Норма - это функция $\|\cdot\|:\mathbb{R}^n\to[0,+\infty)$, удовлетворяющая трём аксиомам:
+_**Норма**_ - это функция $\|\cdot\|:\mathbb{R}^n\to[0,+\infty)$, удовлетворяющая трём аксиомам:
 
 1. $\|x\|=0\Leftrightarrow x=0$  
 2. $\|\alpha x\|=|\alpha|\cdot\|x\|,\quad\forall\alpha\in\mathbb{R},\;x\in\mathbb{R}^n$  
 3. $\|x+y\|\leq\|x\|+\|y\|,\quad\forall x,y\in\mathbb{R}^n$ (неравенство треугольника)
 
-### Примеры:
-- **Максимум норма**
-  $$\|x\|_\infty=\max_{1\leq i\leq n}|x_i|$$
-- **Евклидова норма** 
-  $$\|x\|_2=\sqrt{x_1^2+x_2^2+\dots+x_n^2}$$
-- **Норма в $\mathbb{R}^1$**
-  $$\|x\|_C=|x|$$
+### Примеры
+1. **Максимум норма**
+   $$\|x\|_\infty=\max_{1\leq i\leq n}|x_i|$$
+2. **Евклидова норма** 
+   $$\|x\|_2=\sqrt{x_1^2+x_2^2+\dots+x_n^2}$$
+3. **Норма в $\mathbb{R}^1$**
+   $$\|x\|_C=|x|$$
 
 ## Метрика
 
-Метрика - это функция $\rho:\mathbb{R}^n\times\mathbb{R}^n\to[0,+\infty)$, задающая «расстояние» между точками и удовлетворяющая:
+_**Метрика**_ - это функция $\rho:\mathbb{R}^n\times\mathbb{R}^n\to[0,+\infty)$, задающая «расстояние» между точками и удовлетворяющая:
 
 1. $\rho(x,y)\geq0$, причём $\rho(x,y)=0\Leftrightarrow x=y$  
 2. $\rho(x,y)=\rho(y,x)$ (симметричность)  
