--- a/02.md
+++ b/02.md
@@ -1,4 +1,4 @@
-# Билет 2. Функции двух переменных и области их определения. Области в $n$-мерном пространстве (шар, параллелепипед)
+# 2. Функции двух переменных и области их определения. Области в $n$-мерном пространстве (шар, параллелепипед)
 
 ## Функции двух переменных
 
