--- a/03.md
+++ b/03.md
@@ -1,4 +1,4 @@
-# Билет 3. Предельная точка множества. Определение предела функции нескольких переменных (по Коши, по Гейне и через окрестности). Примеры
+# 3. Предельная точка множества. Определение предела функции нескольких переменных (по Коши, по Гейне и через окрестности). Примеры
 
 ## Предельная точка множества
 
@@ -6,24 +6,26 @@
 
 > Другими словами: $\forall\varepsilon>0\;\exists x\in E\cap U_\varepsilon(x_0)\setminus\{x_0\}$, где $U_\varepsilon(x_0)=\{x:\|x-x_0\|<\varepsilon\}$ — открытый шар радиуса $\varepsilon$.
 
-## Определение предела функции двух переменных
+## Предел функции нескольких (двух) переменных
 
 Пусть $f(x,y)$ определена в некоторой проколотой окрестности точки $(x_0,y_0)$.
-
-### По Коши:
 $$
-\lim_{\substack{x\to x_0\\y\to y_0}}f(x,y)=A \quad\Leftrightarrow\quad \forall\varepsilon>0\;\exists\delta>0:\;0<|x-x_0|<\delta,\;0<|y-y_0|<\delta\Rightarrow|f(x,y)-A|<\varepsilon
+\lim_{\substack{x\to x_0\\y\to y_0}}f(x,y)=A
+$$
+### По Коши:
+$$ 
+\forall\varepsilon>0\;\exists\delta>0:\;0<|x-x_0|<\delta,\;0<|y-y_0|<\delta\Rightarrow|f(x,y)-A|<\varepsilon
 $$
 
 ### Через окрестности:
 $$
-\lim_{\substack{x\to x_0\\y\to y_0}}f(x,y)=A \quad\Leftrightarrow\quad \forall\varepsilon>0\;\exists\delta>0:\;U_\delta^*(x_0,y_0)\subset D_f\Rightarrow f(U_\delta^*(x_0,y_0))\subset U_\varepsilon(A)
+\forall\varepsilon>0\;\exists\delta>0:\;U_\delta^*(x_0,y_0)\subset D_f\Rightarrow f(U_\delta^*(x_0,y_0))\subset U_\varepsilon(A)
 $$
-где $U_\delta^*(x_0,y_0)$ — проколотая окрестность точки $(x_0,y_0)$, а $U_\varepsilon(A)=(A-\varepsilon,A+\varepsilon)$.
+где $U_\delta^*(x_0,y_0)$ - проколотая окрестность точки $(x_0,y_0)$, а $U_\varepsilon(A)=(A-\varepsilon,A+\varepsilon)$.
 
 ### По Гейне:
 $$
-\lim_{\substack{x\to x_0\\y\to y_0}}f(x,y)=A \quad\Leftrightarrow\quad \text{для любой последовательности } (x_n,y_n)\to(x_0,y_0),\; (x_n,y_n)\neq(x_0,y_0) \text{ выполняется } f(x_n,y_n)\to A.
+\text{для любой последовательности } (x_n,y_n)\to(x_0,y_0),\; (x_n,y_n)\neq(x_0,y_0) \text{ выполняется } f(x_n,y_n)\to A.
 $$
 
 ## Примеры
