--- a/04.md
+++ b/04.md
@@ -1,4 +1,4 @@
-# Билет 4. Повторные и двойные пределы. Теорема о существовании повторного предела (доказательство). Примеры
+# 4. Повторные и двойные пределы. Теорема о существовании повторного предела (доказательство). Примеры
 
 ## Определения
 
@@ -6,7 +6,7 @@
 $$
 \lim_{\substack{x\to x_0\\y\to y_0}}f(x,y)=A
 $$
-— это предел по Коши/Гейне, когда $(x,y)\to(x_0,y_0)$ **одновременно** любым путём.
+\- это предел по Коши/Гейне, когда $(x,y)\to(x_0,y_0)$ **одновременно** любым путём.
 
 ### Повторные пределы:
 
@@ -51,8 +51,6 @@ $$
 
 Что и требовалось доказать.
 
----
-
 ## Примеры
 
 ### 1) $f(x,y)=x\sin\frac{1}{y}$
@@ -66,8 +64,6 @@ $$
 Двойной предел: $\lim_{\substack{x\to0\\y\to0}}x\sin\frac{1}{y}=0$, потому что $|x\sin\frac{1}{y}|\leq|x|\to0$.
 
 > Замечание: здесь внутренний предел по $y$ не существует, поэтому теорема не применима, но двойной предел существует.
-
----
 
 ### 2) $f(x,y)=\frac{x^2y^2}{x^2+y^2}$
 
@@ -93,8 +89,6 @@ $$
 
 Все три предела совпадают.
 
----
-
 ### 3) $f(x,y)=\frac{x^2-y^2}{x^2+y^2}$
 
 Как уже было показано, двойной предел **не существует**.
@@ -107,9 +101,8 @@ $$
 
 Разные значения → повторные пределы существуют, но не равны друг другу и не равны двойному (который не существует).
 
----
+> [!CAUTION] ЗАМЕЧАНИЕ
+> Существование повторных пределов **не гарантирует** существования двойного предела.  
+> Существование двойного предела **гарантирует** существование повторных пределов 
+> (при условии существования внутреннего предела), и они равны между собой и двойному.
 
-## Важное замечание
-
-Существование повторных пределов **не гарантирует** существования двойного предела.  
-Существование двойного предела **гарантирует** существование повторных пределов (при условии существования внутреннего предела), и они равны между собой и двойному.
