--- a/dgma/16.md
+++ b/dgma/16.md
@@ -1,1 +1,3 @@
 <Badge type="warning">in progress</Badge>
+# 16 Неявно заданные функции. Объяснение проблематики. Теорема о неявно заданной функции (формулировка). 
+Неявно заданная функция
