--- a/dgma/20.md
+++ b/dgma/20.md
@@ -1,12 +1,12 @@
 # 20. Касательное пространство. Локальные координаты. Понятие локальной карты и атласа.
-![Рис. 1](assets/img_1.png)
+![Рис. 1](assets/20-2.png)
 
 **_Касательное пространство_** - это все плоскости $Р$ порождённые для каждой $M_0$ на $\gamma(t)$,
 причём пространство двумерное и одинаково для Любой $\gamma(t)$.
 
 **_Локальные координаты_** - пара координат из $U \times V$
 
-![Рис. 2](assets/img.png)
+![Рис. 2](assets/20-1.png)
 
 **_Локальная карта_** - область $D'$ на поверхности, для которой можно задать локальные координаты
 
