--- a/dgma/21.md
+++ b/dgma/21.md
@@ -1,1 +1,13 @@
 <Badge type="warning">in progress</Badge>
+# 21. Поверхности как двумерные многообразия. Гауссова и средняя кривизна. Ориентация поверхности.
+
+**_Многообразие_** - множество точек $S \subset \mathbb{R}^3$, для которых справедливо
+
+![Рис. 1](assets/21-1.png)
+
+## Гауссова кривизна
+
+## Средняя кривизна
+
+## Ориентация поверхности
+
