feat: билет 7 по ДГМА

--- a/dgma/07.md
+++ b/dgma/07.md
@@ -1,1 +1,7 @@
 <Badge type="warning">in progress</Badge>
+# 7. Теорема Больцано-Вейерштрасса о сходимости подпоследовательности ограниченной последовательности к предельной точке множества (док-во для случая n=2)
+Последовательность $\{P_k\}$ - ограничена. Точки $P_k \in \mathbb{R}^n$ (т.е. $\exists$ параллелепипед $\Pi$, 
+в котором содержатся все точки $\{P_k\}$). Тогда $\exists$ подпоследовательность $P_{n_k}$,
+которая сходится к предельной точке.
+### Доказательство
+![img.png](assets/7-1.png)
