feat: билет 8 по ДГМА (без примеров)

--- a/dgma/08.md
+++ b/dgma/08.md
@@ -1,1 +1,12 @@
-<Badge type="warning">in progress</Badge>
+# 8. Равномерная непрерывность ФНП. Теорема Кантора (формулировка). Примеры.
+
+## Равномерная непрерывность
+
+$f(x,y): E \subset \mathbb{R}^2 \to \mathbb{R}; \quad \forall \varepsilon > 0 \quad \exists \delta(\varepsilon)$:
+
+$\forall P_1,P_2 \in E:  \|P_1 - P_2\| < \delta \Rightarrow |f(P_1) - f(P_2)| < \varepsilon$.
+
+## Теорема Кантора
+Если $\exists f(x,y)$ непрерывная на компакте $K \Rightarrow f(x,y)$ равномерно непрерывна на $K$.
+## Примеры
+<Badge>TODO</Badge>
