fix: static files

--- a/dgma/02.md
+++ b/dgma/02.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 2. Функции двух переменных и области их определения. Области в n-мерном пространстве (шар, параллелепипед)
