--- a/dgma/04.md
+++ b/dgma/04.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 4. Повторные и двойные пределы. Теорема о существовании повторного предела (док-во). Примеры
