--- a/dgma/09.md
+++ b/dgma/09.md
@@ -1,1 +1,3 @@
 <Badge type="warning">in progress</Badge>
+# 9. Дифференцируемость фнп. Необходимое условие дифференцируемости фнп (док-во). Примеры
+
