--- a/dgma/01.md
+++ b/dgma/01.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 1. Функциональная зависимость между переменными. Норма и метрика векторного пространства.
