--- a/dgma/03.md
+++ b/dgma/03.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 3. Предельная точка множества. Определение предела фнп (по Коши, по Гейне и через окрестности). Примеры
