--- a/dgma/05.md
+++ b/dgma/05.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 5. Непрерывность фнп. Предельная точка множества. Теорема о непрерывности суперпозиции (док-во)
