feat: билет 24 по ДГМА

--- a/dgma/24.md
+++ b/dgma/24.md
@@ -1,1 +1,26 @@
 <Badge type="warning">in progress</Badge>
+# 24. Экстремум фнп. Локальный экстремум. Необходимое условие экстремума (док-во)
+
+## Экстремум функции нескольких переменных
+
+$M_0(x_1^\circ, x_2^\circ, \dots, x_n^\circ)$ - точка экстремума (max/min), если  
+$$\exists U_{M_0}^\circ: \forall M \in U_{M_0}^\circ: f(x_1^\circ, \dots, x_n^\circ) > f(x_1, \dots, x_n) / f(x_1^\circ, \dots, x_n^\circ) < f(x_1, \dots, x_n)$$
+
+
+## Необходимое условие экстремума  
+$\exists f \in C^1(E)$ ($\exists f_{x_1}', f_{x_2}', \dots, f_{x_n}' \in C(E)$), и  
+$M_0$ - точка экстремума $\Rightarrow df(M_0)=0 \, \Leftrightarrow \, \operatorname{grad} f(M_0) = 0)$
+
+### Доказательство
+Пусть $\varphi_i = f(x_1, x_2^\circ, \dots, x_n^\circ)$, т.к. $M_0$ - точка экстремума при фиксированном $f$,
+тогда 
+$$\varphi_i(x_1^\circ, \dots, x_n^\circ) \geq \varphi_i(x_1, x_2^\circ, \dots, x_n^\circ) \quad \forall x_1 \in U_{x_1^\circ} \Rightarrow$$
+
+$$
+\Rightarrow
+\begin{cases}
+\dfrac{\partial \varphi_i}{\partial x_1}(M_0) = \dfrac{\partial f}{\partial x_1}(M_0) = 0, \\
+\vdots \\
+\dfrac{\partial \varphi_i}{\partial x_n}(M_0) = \dfrac{\partial f}{\partial x_n}(M_0) = 0;
+\end{cases}
+$$
