--- a/dgma/26.md
+++ b/dgma/26.md
@@ -1,1 +1,6 @@
 <Badge type="warning">in progress</Badge>
+# 26. Знакоопределенные квадратичные формы. Достаточное условие локального экстремума (док-во). 
+
+
+![img.png](img.png)
+![img_1.png](img_1.png)
