--- a/dgma/28.md
+++ b/dgma/28.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 28. Вторая квадратичная форма. Главные кривизны. Гауссова кривизна и средняя кривизна. Теорема о представлении первой и второй квадратичной формы в локальных координатах  (формулировка). 
