feat: билет 1 по ДГМА

--- a/dgma/01.md
+++ b/dgma/01.md
@@ -1,2 +1,30 @@
 <Badge type="warning">in progress</Badge>
 # 1. Функциональная зависимость между переменными. Норма и метрика векторного пространства.
+## Функции нескольких переменных
+$f(x,y): E \to \mathbb{R}$ или в общем случае: $f(x_1, x_2, \dots, x_n) = f(P)$, где $P = (x_1, \dots, x_n)$.
+
+## Норма
+
+Неотрицательная функция $\|\cdot\|: X \to [0; +\infty)$, удовлетворяющая:
+
+1. $\|x\| = 0 \iff x = 0$
+2. $\|\lambda x\| = |\lambda| \cdot \|x\|$, где $\lambda \in \mathbb{R}$ (или $\mathbb{C}$)
+3. $\|x + y\| \leq \|x\| + \|y\|$ (неравенство треугольника)
+
+## Метрика
+
+Функция $\rho(x,y): X^2 \to [0; +\infty)$, удовлетворяющая:
+
+1. $\rho(x,y) \geq 0$, и $\rho(x,y) = 0 \iff x = y$
+2. $\rho(x,y) = \rho(y,x)$ (симметрия)
+3. $\rho(x,y) \leq \rho(x,z) + \rho(z,y)$ (неравенство треугольника)
+
+::: info 
+если задана норма, то можно определить метрику как $\rho(x,y) = \|x - y\|$.
+:::
+
+## Примеры норм в $\mathbb{R}^n$:
+
+1. $\|x\|_{\infty} = \max_{i=1,\dots,n} |x_i|$ - равномерная (чебышёвская) норма
+2. $\|x\|_1 = \sum_{i=1}^n |x_i|$ - Манхэттенская норма
+3. $\|x\|_2 = \sqrt{x_1^2 + x_2^2 + \dots + x_n^2}$ - евклидова норма
