--- a/dgma/16.md
+++ b/dgma/16.md
@@ -1,3 +1,6 @@
 <Badge type="warning">in progress</Badge>
-# 16 Неявно заданные функции. Объяснение проблематики. Теорема о неявно заданной функции (формулировка). 
+# 16. Неявно заданные функции. Объяснение проблематики. Теорема о неявно заданной функции (формулировка). 
 Неявно заданная функция
+
+
+![19-2.png](19-2.png)
