--- a/dgma/17.md
+++ b/dgma/17.md
@@ -1,1 +1,3 @@
 <Badge type="warning">in progress</Badge>
+# 17. Поверхности в трехмерном пространстве. Регулярная поверхность. Примеры. Способы задания поверхностей.Неособая точка. Примеры.
+
