--- a/dgma/18.md
+++ b/dgma/18.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 18. Теорема о производной неявной функции (общая формулировка+доказательство для случая 2-х переменных)
