feat: билет 2 по ДГМА

--- a/dgma/02.md
+++ b/dgma/02.md
@@ -1,2 +1,37 @@
-<Badge type="warning">in progress</Badge>
 # 2. Функции двух переменных и области их определения. Области в n-мерном пространстве (шар, параллелепипед)
+
+## Функции нескольких переменных
+$f(x,y): E \to \mathbb{R}$ или в общем случае: $f(x_1, x_2, \dots, x_n) = f(P)$, где $P = (x_1, \dots, x_n)$.
+
+
+## Открытый шар
+Открытый шар с центром в точке $x_0$:  
+$$
+B_\delta(x_0) = \{ x \in \mathbb{R}^n : \|x - x_0\| < \delta \}
+$$
+
+
+## Замкнутый шар
+ 
+Замкнутый шар с центром в точке $x_0$:  
+$$
+\overline{B}_\delta(x_0) = \{ x \in \mathbb{R}^n : \|x - x_0\| \leq \delta \}
+$$
+
+
+## Открытый параллелепипед (брус)
+
+Пусть $x_0 = (x_1^\circ, x_2^\circ, \dots, x_n^\circ)$ - центр, $\delta_1, \delta_2, \dots, \delta_n > 0$ - полуширины по осям. Тогда открытый параллелепипед:
+$$
+\Pi(x_0) = \left\{ x \in \mathbb{R}^n :
+\begin{aligned}
+&|x^1 - x_1^\circ| < \delta_1, \\
+&|x^2 - x_2^\circ| < \delta_2, \\
+&\dots \\
+&|x^n - x_n^\circ| < \delta_n
+\end{aligned}
+\right\}
+$$
+::: tip
+Если все $\delta_i$ равны: $\delta_1 = \delta_2 = \dots = \delta_n$, то такой параллелепипед называется **кубом**.
+:::
