--- a/dgma/01.md
+++ b/dgma/01.md
@@ -1,4 +1,3 @@
-<Badge type="warning">in progress</Badge>
 # 1. Функциональная зависимость между переменными. Норма и метрика векторного пространства.
 ## Функции нескольких переменных
 $f(x,y): E \to \mathbb{R}$ или в общем случае: $f(x_1, x_2, \dots, x_n) = f(P)$, где $P = (x_1, \dots, x_n)$.
@@ -19,8 +18,8 @@ $f(x,y): E \to \mathbb{R}$ или в общем случае: $f(x_1, x_2, \dots
 2. $\rho(x,y) = \rho(y,x)$ (симметрия)
 3. $\rho(x,y) \leq \rho(x,z) + \rho(z,y)$ (неравенство треугольника)
 
-::: info 
-если задана норма, то можно определить метрику как $\rho(x,y) = \|x - y\|$.
+::: tip 
+Если задана норма, то можно определить метрику как $\rho(x,y) = \|x - y\|$.
 :::
 
 ## Примеры норм в $\mathbb{R}^n$:
