feat: билет 15 по ДГМА

--- a/dgma/03.md
+++ b/dgma/03.md
@@ -1,2 +1,22 @@
 <Badge type="warning">in progress</Badge>
 # 3. Предельная точка множества. Определение предела фнп (по Коши, по Гейне и через окрестности). Примеры
+
+**Определение (по Коши):**
+
+$$
+\forall \varepsilon > 0 \ \exists \delta(\varepsilon) > 0 : \forall P \in E \cap B_\delta(P_0) \setminus \{P_0\} \Rightarrow |f(P) - A| < \varepsilon
+$$
+
+где $P_0 = (x_0, y_0)$, $P = (x,y)$, а $B_\delta(P_0)$ — открытый шар радиуса $\delta$ с центром в $P_0$.
+
+Эквивалентно:  
+$$
+\begin{cases}
+0 < |x - x_0| < \delta \\
+0 < |y - y_0| < \delta
+\end{cases}
+\Rightarrow |f(x,y) - A| < \varepsilon
+$$
+
+> Геометрически: значение $f(P)$ попадает в $\varepsilon$-окрестность числа $A$, если точка $P$ попадает в проколотую $\delta$-окрестность точки $P_0$.
+
