--- a/dgma/04.md
+++ b/dgma/04.md
@@ -1,9 +1,16 @@
 <Badge type="warning">in progress</Badge>
 # 4. Повторные и двойные пределы. Теорема о существовании повторного предела (док-во). Примеры
 
+## Двойной предел
+
+$$
+\lim_{\substack{x \to x_0 \\ y \to y_0}} f(x,y) = \lim_{P \to P_0} f(P) = A = \text{const}
+$$
+
 ## Повторный предел
 
-## Двойной предел
+1. $\displaystyle \lim_{x \to x_0} \left( \lim_{y \to y_0} f(x,y) \right)$ - сначала по $y$, потом по $x$
+2. $\displaystyle \lim_{y \to y_0} \left( \lim_{x \to x_0} f(x,y) \right)$ - сначала по $x$, потом по $y$
 
 ## Теорема о существовании повторного предела
 
