--- a/dgma/15.md
+++ b/dgma/15.md
@@ -1,1 +1,51 @@
 <Badge type="warning">in progress</Badge>
+# 15. Производная по направлению (вывод формулы).
+
+**Производная по направлению**
+
+Пусть $f(x,y,z)$ — дифференцируемая функция, и $\vec{l}$ — единичный вектор направления:  
+$$
+\vec{l} = (\cos\alpha, \cos\beta, \cos\gamma), \quad |\vec{l}| = 1.
+$$
+
+Тогда производная по направлению $\vec{l}$ равна:
+
+$$
+\frac{\partial f}{\partial \vec{l}} = a \cdot \cos\alpha + b \cdot \cos\beta + c \cdot \cos\gamma,
+$$
+
+где $a = \frac{\partial f}{\partial x}, \ b = \frac{\partial f}{\partial y}, \ c = \frac{\partial f}{\partial z}$ — частные производные.
+
+Это можно переписать как:
+
+$$
+\frac{\partial f}{\partial \vec{l}} = \sqrt{a^2 + b^2 + c^2} \cdot \left( \frac{a \cos\alpha}{\sqrt{a^2 + b^2 + c^2}} + \frac{b \cos\beta}{\sqrt{a^2 + b^2 + c^2}} + \frac{c \cos\gamma}{\sqrt{a^2 + b^2 + c^2}} \right)
+$$
+
+Заметим, что вектор  
+$$
+\vec{s} = \left( \frac{a}{\sqrt{a^2 + b^2 + c^2}}, \frac{b}{\sqrt{a^2 + b^2 + c^2}}, \frac{c}{\sqrt{a^2 + b^2 + c^2}} \right)
+$$  
+— это **единичный вектор направления градиента**, т.е. $\vec{s} = \frac{\operatorname{grad} f}{|\operatorname{grad} f|}$.
+
+Тогда:
+
+$$
+\frac{\partial f}{\partial \vec{l}} = |\operatorname{grad} f| \cdot (\vec{s}, \vec{l}) = \operatorname{grad} f \cdot \vec{l}
+$$
+
+где $(\vec{s}, \vec{l})$ — скалярное произведение.
+
+Таким образом, окончательная формула:
+
+$$
+\boxed{
+\frac{\partial f}{\partial \vec{l}} = \operatorname{grad} f \cdot \vec{l} = \left( \frac{\partial f}{\partial x}, \frac{\partial f}{\partial y}, \frac{\partial f}{\partial z} \right) \cdot (\cos\alpha, \cos\beta, \cos\gamma)
+}
+$$
+
+**Определение вектора градиента:**
+
+$$
+\operatorname{grad} f = \left( \frac{\partial f}{\partial x}, \frac{\partial f}{\partial y}, \frac{\partial f}{\partial z} \right)
+$$
