feat: билет 12 по ДГМА

--- a/dgma/12.md
+++ b/dgma/12.md
@@ -1,1 +1,9 @@
-<Badge type="warning">in progress</Badge>
+# 12. Теорема о равенстве смешанных производных (док-во)
+
+Пусть $f(x,y)$ определена в окрестности точки $(x_0,y_0)$ и имеет в этой окрестности непрерывные частные производные $\frac{\partial^2 f}{\partial x \partial y}$ и $\frac{\partial^2 f}{\partial y \partial x}$. Тогда
+$$
+\frac{\partial^2 f}{\partial x \partial y}(x_0,y_0) = \frac{\partial^2 f}{\partial y \partial x}(x_0,y_0)
+$$
+
+### Доказательство
+![Рисунок 12-1](12-1.png)
