feat: билет 11 по ДГМА

--- a/dgma/11.md
+++ b/dgma/11.md
@@ -1,2 +1,15 @@
-<Badge type="warning">in progress</Badge>
 # 11. Теорема о дифференцируемости сложной функции (док-во для случая 2-х переменных)
+
+Пусть $f(x,y)$ дифференцируема в точке $(x_0,y_0)$, и $x = \varphi(t)$, $y = \psi(t)$ - непрерывно дифференцируемы в точке $t_0$, причём $\varphi(t_0) = x_0, \psi(t_0) = y_0$.
+
+Тогда функция  
+$$
+F(t) = f(\varphi(t), \psi(t))
+$$  
+дифференцируема в точке $t_0$, и её производная равна:  
+$$
+F'(t_0) = f_x' \cdot \varphi'(t_0) + f_y' \cdot \psi'(t_0)
+$$
+
+### Доказательство
+![Рисунок 11-1](assets/11-1.png)
