--- a/dgma/19.md
+++ b/dgma/19.md
@@ -16,4 +16,4 @@ $\forall U \in S$ оно задаётся нулями, т.е. $F(x,y,z) = 0$
 
 ### Доказательство
 
-![img_2.png](19-2.png)
+![img_2.png](assets/19-2.png)
