feat: билет 9 по ДГМА

--- a/dgma/09.md
+++ b/dgma/09.md
@@ -1,3 +1,38 @@
 <Badge type="warning">in progress</Badge>
 # 9. Дифференцируемость фнп. Необходимое условие дифференцируемости фнп (док-во). Примеры
 
+## Дифференцируемость функции нескольких переменных
+
+Пусть $f(x,y,z)$ определена в окрестности точки $P_0 = (x_0,y_0,z_0)$.  
+Функция $f$ называется дифференцируемой в точке $P_0$, если её приращение можно представить в виде:  
+$$
+\Delta f(P_0) = f(x_0 + \Delta x, y_0 + \Delta y, z_0 + \Delta z) - f(x_0, y_0, z_0) = A \Delta x + B \Delta y + C \Delta z + o(\Delta x) + o(\Delta y) + o(\Delta z)
+$$  
+при $\Delta x, \Delta y, \Delta z \to 0$.
+
+
+## Необходимое условие дифференцируемости
+
+Если $f(x,y,z)$ дифференцируема в точке $P_0$, то она непрерывна в этой точке.
+
+### Доказательство
+
+$f(x,y,z)$ дифференцируема в $P_0$ $\iff$  
+$$
+\Delta f(P_0) = f(x_0 + \Delta x, y_0 + \Delta y, z_0 + \Delta z) - f(x_0, y_0, z_0)
+$$ 
+$$
+\Delta f(P_0) = A \Delta x + B \Delta y + C \Delta z + \alpha \Delta x + \beta \Delta y + \gamma \Delta z
+$$
+
+Перейдём к пределу при $(\Delta x, \Delta y, \Delta z) \to 0$:  
+$$
+\lim_{\substack{\Delta x \to 0 \\ \Delta y \to 0 \\ \Delta z \to 0}} \Delta f(P_0) = \lim_{\substack{\Delta x \to 0 \\ \Delta y \to 0 \\ \Delta z \to 0}} \left[ f(x_0 + \Delta x, y_0 + \Delta y, z_0 + \Delta z) - f(x_0, y_0, z_0) \right] = 0
+$$
+
+Следовательно:  
+$$
+\lim_{P \to P_0} f(P) = f(P_0)
+$$
+
+Что означает, что $f$ непрерывна в точке $P_0$.
