feat: билет 10 по ДГМА

--- a/dgma/09.md
+++ b/dgma/09.md
@@ -1,4 +1,3 @@
-<Badge type="warning">in progress</Badge>
 # 9. Дифференцируемость фнп. Необходимое условие дифференцируемости фнп (док-во). Примеры
 
 ## Дифференцируемость функции нескольких переменных
@@ -36,3 +35,6 @@ $$
 $$
 
 Что означает, что $f$ непрерывна в точке $P_0$.
+
+## Примеры
+![Рисунок 9-1](assets/9-1.png)
