feat: билет 3 по ДГМА

--- a/dgma/03.md
+++ b/dgma/03.md
@@ -1,15 +1,26 @@
 <Badge type="warning">in progress</Badge>
 # 3. Предельная точка множества. Определение предела фнп (по Коши, по Гейне и через окрестности). Примеры
 
-**Определение (по Коши):**
+## Предел
+### По Коши
 
 $$
-\forall \varepsilon > 0 \ \exists \delta(\varepsilon) > 0 : \forall P \in E \cap B_\delta(P_0) \setminus \{P_0\} \Rightarrow |f(P) - A| < \varepsilon
+\forall \varepsilon > 0 \ \exists \delta(\varepsilon) > 0 : \forall P \in E \cap \mathring{U}_\delta(P_0) \Rightarrow |f(P) - A| < \varepsilon
 $$
 
-где $P_0 = (x_0, y_0)$, $P = (x,y)$, а $B_\delta(P_0)$ — открытый шар радиуса $\delta$ с центром в $P_0$.
+где $\mathring{U}_\delta(P_0)$ — проколотая окрестность точки $P_0 = (x_0, y_0)$.
 
-Эквивалентно:  
+### По Гейне
+
+$$
+\begin{cases}
+x_n \to x_0, \ y_n \to y_0, \ (x_n, y_n) \ne (x_0, y_0) \\
+\Rightarrow f(x_n, y_n) \to A
+\end{cases}
+$$
+
+### Через окрестности (в координатах)
+
 $$
 \begin{cases}
 0 < |x - x_0| < \delta \\
@@ -18,5 +29,7 @@ $$
 \Rightarrow |f(x,y) - A| < \varepsilon
 $$
 
-> Геометрически: значение $f(P)$ попадает в $\varepsilon$-окрестность числа $A$, если точка $P$ попадает в проколотую $\delta$-окрестность точки $P_0$.
+## Примеры
 
+![Рисунок 3-1](assets/4-1.png)
+![Рисунок 3-2](assets/4-2.png)
