--- a/dgma/04.md
+++ b/dgma/04.md
@@ -79,3 +79,8 @@ $$
 $$  
 \- это **дополнительное условие**, которое нужно проверять отдельно.
 :::
+
+## Примеры
+
+![Рисунок 4-1](assets/4-1.png)
+![Рисунок 4-2](assets/4-2.png)
