feat: билет 5 по ДГМА

--- a/dgma/05.md
+++ b/dgma/05.md
@@ -1,2 +1,59 @@
-<Badge type="warning">in progress</Badge>
 # 5. Непрерывность фнп. Предельная точка множества. Теорема о непрерывности суперпозиции (док-во)
+
+## Непрерывность ФНП и предельная точка
+
+::: tip Wikipedia
+**_Предельная точка множества_** в общей топологии - это такая точка, любая проколотая окрестность которой пересекается с этим множеством.
+:::
+
+Пусть $f(x_1, \dots, x_n): E \subset \mathbb{R}^n \to \mathbb{R}$, и $P_0$ - **_предельная точка_** множества $E$.
+
+Функция $f(x_1, \dots, x_n)$ называется **_непрерывной_** в точке $P_0$, если  
+$$
+\exists \lim_{P \to P_0} f(P) = f(P_0) = \text{const}
+$$
+
+Эквивалентно (по Коши):  
+$$
+\forall \varepsilon > 0 \ \exists \delta(\varepsilon) > 0 : \forall P \in B_\delta(P_0) \cap E \Rightarrow |f(P) - f(P_0)| < \varepsilon
+$$
+
+где $B_\delta(P_0)$ — открытый шар радиуса $\delta$ с центром в $P_0$.
+
+В координатах:  
+$$
+\begin{cases}
+|x_1 - x_1^\circ| < \delta \\
+|x_2 - x_2^\circ| < \delta \\
+\vdots \\
+|x_n - x_n^\circ| < \delta
+\end{cases}
+\Rightarrow |f(x_1, \dots, x_n) - f(x_1^\circ, \dots, x_n^\circ)| < \varepsilon
+$$
+
+
+## Теорема о непрерывности суперпозиции
+Пусть функция $f(x_1, \dots, x_n)$ непрерывна в точке $P_0 = (x_1^\circ, x_2^\circ, \dots, x_n^\circ)$.
+
+Пусть переменные $x_i$ выражены через параметры $t_1, \dots, t_m$:  
+$$
+\begin{cases}
+x_1 = \varphi_1(t_1, \dots, t_m) \\
+\vdots \\
+x_n = \varphi_n(t_1, \dots, t_m)
+\end{cases}
+$$  
+и каждая $\varphi_i$ непрерывна в точке $T_0 = (t_1^\circ, \dots, t_m^\circ)$, причём:  
+$$
+\varphi_i(t_1^\circ, \dots, t_m^\circ) = x_i^\circ
+$$
+
+Тогда сложная функция  
+$$
+f(x_1, \dots, x_n) = f\big( \varphi_1(t_1, \dots, t_m), \varphi_2(t_1, \dots, t_m), \dots, \varphi_n(t_1, \dots, t_m) \big)
+$$  
+непрерывна в точке $T_0 = (t_1^\circ, \dots, t_m^\circ)$.
+
+### Доказательство
+![img_2.png](assets/5-1.png)
+
