feat: билет 13 по ДГМА

--- a/dgma/22.md
+++ b/dgma/22.md
@@ -1,1 +1,2 @@
 <Badge type="warning">in progress</Badge>
+# 22. Длины кривых на поверхности. Вектор скорости. Градиент. Первая квадратичная форма (риманова метрика). Лемма (док-во).	
