--- a/dgma/13.md
+++ b/dgma/13.md
@@ -1,2 +1,10 @@
 <Badge type="warning">in progress</Badge>
-# 13. Полный дифференциал фнп.  Инвариантность формы первого дифференциала (док-во). 
+# 13. Полный дифференциал фнп. Инвариантность формы первого дифференциала (док-во). 
+## Полный дифференциал ФНП
+Для функции $f(x,y,z)$, дифференцируемой в точке $(x_0, y_0, z_0)$, полный дифференциал равен:  
+$$
+df(x_0, y_0, z_0) = f_x'(x_0, y_0, z_0) \, dx + f_y'(x_0, y_0, z_0) \, dy + f_z'(x_0, y_0, z_0) \, dz
+$$
+## Инвариантность формы первого дифференциала
+Форма полного дифференциала не меняется при параметризации переменных
+![Рисунок 13-1](assets/13-1.png)
