feat: билет 14 по ДГМА

--- a/dgma/14.md
+++ b/dgma/14.md
@@ -1,2 +1,7 @@
-<Badge type="warning">in progress</Badge>
 # 14. Отсутствие инвариантности у второго дифференциала. Дифференциалы высших порядков. Формула Тейлора.
+
+## Отсутствие инвариантности у второго дифференциала
+![Рисунок 14-1](assets/14-1.png)
+
+## Формула Тейлора
+![Рисунок 14-2](assets/14-2.png)
