feat: билет 17 по ДГМА

--- a/dgma/17.md
+++ b/dgma/17.md
@@ -1,3 +1,17 @@
-<Badge type="warning">in progress</Badge>
-# 17. Поверхности в трехмерном пространстве. Регулярная поверхность. Примеры. Способы задания поверхностей.Неособая точка. Примеры.
+# 17. Поверхности в трехмерном пространстве. Регулярная поверхность. Примеры. Способы задания поверхностей. Неособая точка. Примеры.
 
+![Рисунок 17-1](assets/17-1.png)
+
+## Регулярная поверхность
+
+Множество точек $S \subset \mathbb{R}^3$ называется **_регулярной поверхностью_** (Р.П.), если в окрестности каждой своей точки
+его можно представить в виде функции, зависящей от двух переменных (например, $z = f(x,y)$), в соответствующих декартовых координатах.
+
+## Способы задания поверхностей
+![Рисунок 17-2](assets/17-2.png)
+
+## Неособая точка
+**_Неособая точка_** - такая точка, что градиент от функции, задающей поверхность, в этой точке не обращается в $0$.
+
+### Примеры
+Вершина координат у конуса $z^2 = x^2 + y^2$ является особой. Все точки сферы неособые.
