--- a/dgma/19.md
+++ b/dgma/19.md
@@ -7,13 +7,12 @@
 $\forall U \in S$ оно задаётся нулями, т.е. $F(x,y,z) = 0$
 
 ### Доказательство
-![Рис. 19-1](assets/19-1.png)
+![Рисунок 19-1](assets/19-1.png)
 
 ## Лемма 2
 Множество $S \subset \mathbb{R}^3$ образует регулярную поверхность $\Leftrightarrow$ если в каждой своей окрестности $\forall x \in S$ оно задаётся
 гладким отображением $\vec{r}$: $\quad \vec{r}: (u,v) \to \big( x(u,v), y(u,v), z(u,v) \big)$ и $\frac{d \vec{r}}{d  u}, \frac{d \vec{r}}{d v}$ линейно независимы
 
-
 ### Доказательство
 
-![img_2.png](assets/19-2.png)
+![Рисунок 19-2](assets/19-2.png)
