feat: билет 16 по ДГМА

--- a/dgma/16.md
+++ b/dgma/16.md
@@ -1,5 +1,8 @@
-<Badge type="warning">in progress</Badge>
 # 16. Неявно заданные функции. Объяснение проблематики. Теорема о неявно заданной функции (формулировка). 
-Неявно заданная функция
 
-![19-2.png](assets/19-2.png)
+## Проблематика
+Не все неявные функции можно выразить явно (например, уравнение окружности). Хочется чтобы можно было. Что делать?
+
+## Теорема о неявно заданной функции
+
+![Рисунок 16-1](assets/16-1.png)
