--- a/dgma/23.md
+++ b/dgma/23.md
@@ -1,2 +1,2 @@
-<Badge type="warning">in progress</Badge>
 # 23. Касательная плоскость и вектор нормали к поверхности. Касательный вектор при переходе из одних локальных координат в другие.	
+![Рисунок 23-1](assets/23-1.png)
