feat: билет 26 по ДГМА

--- a/dgma/26.md
+++ b/dgma/26.md
@@ -1,6 +1,10 @@
 <Badge type="warning">in progress</Badge>
 # 26. Знакоопределенные квадратичные формы. Достаточное условие локального экстремума (док-во). 
 
-
-![img.png](img.png)
-![img_1.png](img_1.png)
+## Достаточное условие экстремума
+Если $K < 0$, то экстремум
+### Доказательство
+![img_2.png](assets/26-1.png)
+![img_3.png](assets/26-2.png)
+![img_4.png](assets/26-3.png)
+![img_5.png](assets/26-4.png)
