feat: билет 28 по ДГМА (не особо готов)

--- a/dgma/28.md
+++ b/dgma/28.md
@@ -1,2 +1,3 @@
 <Badge type="warning">in progress</Badge>
 # 28. Вторая квадратичная форма. Главные кривизны. Гауссова кривизна и средняя кривизна. Теорема о представлении первой и второй квадратичной формы в локальных координатах  (формулировка). 
+![img.png](img.png)
